--- a/index1.Rmd
+++ b/index1.Rmd
@@ -142,7 +142,7 @@ p
 ---
 
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 # All packages used below must be installed first
 library(devtools)
 # devtools::install_github("laresbernardo/lares")
@@ -150,19 +150,17 @@ library(lares)
 library(ggplot2)
 library(hrbrthemes)
 library(ggrepel)
-
 library(tidyverse)
-theme_set(theme_bw(base_size=12, base_family = 'Nunito')+ 
-  theme(panel.grid.major = element_blank(),
-  panel.grid.minor = element_blank()))
 
 
 plot_timeline2 <- function(event, start, end = start + 1, label = NA, group = NA,
                            title = "", subtitle = "", size = 8, colour = "red", save = FALSE, subdir = NA) {
-  df <- data.frame(
-    Role = as.character(event), Place = as.character(label),
-    Start = lubridate::date(start), End = lubridate::date(end),
-    Type = group)
+   
+  df <- data.frame(Role = as.character(event), 
+                   Place = as.character(label),
+                   Start = lubridate::date(start), 
+                   End = lubridate::date(end), 
+                   Type = group)
   
   cvlong <- data.frame(pos = rep(as.numeric(rownames(df)),2), 
                        name = rep(as.character(df$Role), 2), 
@@ -172,33 +170,26 @@ plot_timeline2 <- function(event, start, end = start + 1, label = NA, group = NA
   maxdate <- max(df$End)
   
   p <- ggplot(cvlong, aes(x = value, y = reorder(name, -pos), label = where, group = pos)) +
-          geom_vline(xintercept = maxdate,
-                     alpha = 0.8, 
-                     linetype = "dashed") + 
-          labs(title = title, subtitle = subtitle, x = NULL, y = NULL, colour = NULL) +
-          theme_ipsum() + 
-          theme(panel.background = element_rect(fill = "white", colour = NA), 
-                axis.ticks = element_blank(), 
-                panel.grid.major.x = element_line(size = 0.25, colour = "grey80"))
+       geom_vline(xintercept = maxdate, alpha = 0.8,  linetype = "dashed") + 
+       labs(title = title, subtitle = subtitle, x = NULL, y = NULL, colour = NULL) +
+       theme_ipsum() + 
+       theme(panel.background = element_rect(fill = "white", colour = NA), 
+             axis.ticks = element_blank(), 
+             panel.grid.major.x = element_line(size = 0.25, colour = "grey80"))
 
 if (!is.na(cvlong$type)[1] | length(unique(cvlong$type)) > 1) {
     p <- p + geom_line(aes(color = type), size = size) +
-      facet_grid(type ~ ., scales = "free", space = "free") +
-      guides(colour = FALSE) +
-      scale_colour_manual(values = c("#8fada7", "#7c839f", "#a19aa3", "#a46e7c", "#635867" ))
+             facet_grid(type ~ ., scales = "free", space = "free") +
+             guides(colour = FALSE) +
+             scale_colour_manual(values = c("#8fada7", "#7c839f", "#a19aa3", "#a46e7c", "#635867" ))
   }
   else {
     p <- p + geom_line(size = size, colour = colour) 
-             #geom_text_repel()
   }
-  #p <- p + geom_text(aes(x = label_pos))
+     p <- p +  annotate(geom = "curve", x = 4, y = 35, xend = 2.65, yend = 27, curvature = .3, arrow = arrow(length = unit(2, "mm"))) +
+               annotate(geom = "text", x = 4.1, y = 35, label = "TEste", hjust = "left")
      
-   #  geom_label_repel(aes(x = label_pos), 
-   #                         position = "dodge",
-   # size = 4,
-   # alpha = 0.9,
-   # segment.size = .25,
-   # segment.alpha = .8)
+    #p <- p + geom_label_repel(aes(x = label_pos), family = "Arial", size = 3, min.segment.length = 0,  seed = 42,  box.padding = 0.5, max.overlaps = Inf, arrow = arrow(length = unit(0.010, "npc")), nudge_x = .15, nudge_y = .5, color = "grey50")
   
   
   if (save) {
@@ -251,8 +242,102 @@ x <- plot_timeline2(
 
 x
 
+       #geom_label_repel(aes(x = label_pos), size = 2, min.segment.length = 0,  seed = 42,  box.padding = 0.05, max.overlaps = Inf, arrow = arrow(length = unit(0.010, "npc")), nudge_x = .05, nudge_y = .05, color = "grey50", show.legend = FALSE)
+
+p
+      # annotate(geom = "curve", x = as.Date(cvlong$label_pos), y = 0.05, xend = 2.65, yend = 27, curvature = .3, arrow = arrow(length = unit(2, "mm"))) +
+      # annotate(geom = "text", x = as.Date(cvlong$label_pos), y = 0.05, label = "Teste", hjust = "left")
+p
+
+
+
 ggsave("cv_timeline.png", width = 8, height = 6)
-    
+```  
+
+```{r}
+# All packages used below must be installed first
+library(devtools)
+# devtools::install_github("laresbernardo/lares")
+library(lares)
+library(ggplot2)
+library(hrbrthemes)
+library(ggrepel)
+library(tidyverse)
+
+order <- c("Role", "Place", "Type", "Start", "End")
+
+today <- as.character(Sys.Date())
+
+cv <- data.frame(rbind(
+  c("Basic education", "BH", "Education", "1979-06-01", "1996-12-01"),
+  c("B.Sc. Civil Engineering", "UFMG", "Education", "1997-02-01", "2002-01-08"),
+  c("PgDip.in Railway Engineering", "Vale", "Education", "2003-09-15", "2004-04-20"),
+  c("M.Sc. Transportation Engineering", "IME", "Education", "2002-02-01", "2004-08-02"),
+  c("D.Sc. Geography", "PUCMinas", "Education", "2011-02-01", "2015-08-20"),
+  c("Patrick", "My love", "Heart", "2001-05-31", today),
+  c("Sofia", "More love", "Heart", "2009-09-01", today),
+  c("João", "More and more love", "Heart", "2012-12-05", today),
+  c("English Teacher", "Home", "Work\n Teaching and\n research", "1996-03-01", "2001-06-30"),
+  c("Assistant lecturer", "Different institutions", "Work\n Teaching and\n research", "2003-01-01", "2006-02-09"),
+  c("Teaching and research fellow", "UFMG", "Work\n Teaching and\n research", "2017-08-01", "2021-07-01"),
+  c("Teaching and research", "CEFET-MG", "Work\n Teaching and\n research", "2006-02-10", today),
+  c("Postdoctoral researcher", "Gustave Eiffel", "Work\n Teaching and\n research", "2020-10-01", "2021-06-30"),
+  c("Transportion and Urban Planner", "IAC-UFT", "Work\n industry", "2020-07-01", "2021-01-31"),
+  c("Railway Engineer", "Vale", "Work\n industry", "2003-09-15", "2005-05-01"),
+  c("Consultant in Transporation Engineering", "Systra/Tectran", "Work\n industry", "2003-02-01", "2003-09-15"),
+  c("Birth", "BH", "Life", "1979-02-26", today),
+  c("International experience", "Idaho-US", "Life", "1995-08-01", "1996-02-01"),
+  c("International experience", "France", "Life", "2013-06-20", "2013-12-31")
+))
+
+colnames(cv) <- order
+
+event = cv$Role
+start = cv$Start
+end = cv$End
+label = cv$Place
+group = cv$Type
+  
+df <- data.frame(Role = as.character(event), 
+                   Place = as.character(label),
+                   Start = lubridate::date(start), 
+                   End = lubridate::date(end), 
+                   Type = group)
+
+cvlong <- data.frame(pos = rep(as.numeric(rownames(df)),2), 
+                     name = rep(as.character(df$Role), 2), 
+                     type = rep(factor(df$Type, levels = c("Life", "Education", "Work\n Teaching and\n research", "Work\n industry", "Heart")), 2), 
+                     where = rep(as.character(df$Place),2), value = c(df$Start, df$End), 
+                     label_pos = as.Date(df$Start))
+  
+maxdate <- max(df$End)
+size = 8
+
+p <- ggplot(cvlong, aes(x = value, y = reorder(name, -pos), label = where, group = pos)) +
+       geom_vline(xintercept = maxdate, alpha = 0.8,  linetype = "dashed") + 
+       labs(x = NULL, y = NULL, colour = NULL) +
+       theme_ipsum() + 
+       theme(panel.background = element_rect(fill = "white", colour = "white"), 
+             axis.ticks = element_blank(), 
+             panel.grid.major.x = element_line(size = 0.25, colour = "grey80"),
+             legend.position="none") +
+       geom_line(aes(color = type), size = size) +
+             facet_grid(type ~ ., scales = "free", space = "free") +
+             scale_colour_manual(values = c("#8fada7", "#7c839f", "#a19aa3", "#a46e7c", "#635867" )) 
+plotly(p)
+p
+
+
+
+ggsave("cv_timeline.png", width = 15, height = 6)
+
+ #    p <- p + annotate(geom = "curve", x = 4, y = 35, xend = 2.65, yend = 27, curvature = .3, arrow = arrow(length = unit(2, "mm"))) +
+  #             annotate(geom = "text", x = 4.1, y = 35, label = "TEste", hjust = "left")
+     
+    #p <- p + geom_label_repel(aes(x = label_pos), family = "Arial", size = 3, min.segment.length = 0,  seed = 42,  box.padding = 0.5, max.overlaps = Inf, arrow = arrow(length = unit(0.010, "npc")), nudge_x = .15, nudge_y = .5, color = "grey50")
+  
+
+
 ```
 
 
