--- a/index.Rmd
+++ b/index.Rmd
@@ -30,14 +30,15 @@ class: middle
 background-image: url(img/imagem3.png)
 background-size: contain
 
-.huge[
-.center[
-Curating people and Reducing distances.... 
-]]
 
-.purple[
+.enormous[
+Enhancing and reducing distances.... 
+]
+
+
 .bigger[
-**Lecture for the position "Assistant Professor progressing the transition to future transport solutions"**
+.purple[
+Lecture for the position "Assistant Professor progressing the transition to future transport solutions
 ]]
 
 
@@ -46,14 +47,35 @@ Curating people and Reducing distances....
 ]
 
 ---
-background-image: url(img/joanna-kosinska-1_CMoFsPfso-unsplash.jpg)
-background-size: cover
+class: inverse
 
 # Agenda
 
+--
+
 .large[
-.bold[
-.pull-right-wide[
+Understanding the world...
+]
+
+--
+.large[
+Learning and teaching...
+]
+
+--
+.large[
+Producing and sharing knowlegde for a better world...
+]
+
+--
+.large[
+Why Chalmers and where to go...
+]
+
+???
+
+I have structured my presentation in four chronological sections! 
+
 Understanding the world...
 
 Learning and teaching...
@@ -62,29 +84,29 @@ Producing and sharing knowlegde for a better world...
 
 Why Chalmers and where to go...
 
-]]]
-
-
 ---
-class: center, middle
+
+class: center
 background-image: url(img/flower2.jpg)
 background-size: cover
 
-.huge[Understanding the world...]
-
+.enormous[
+Understanding the world...
+]
 
 ---
 class: center, middle
-background-image: url(img/flower2.jpg)
-background-size: cover
 
 ```{r time, echo=FALSE, fig.cap="", message=FALSE, warning=FALSE, out.width="95%"}
 knitr::include_graphics("img/understand.png")
 ```
 
+???
+
+The first stage of my life was an inductive exploration of the world! 
+
+
 ---
-background-image: url(img/flower2.jpg)
-background-size: cover
 
 ## That's 70s show
 
@@ -95,37 +117,39 @@ knitr::include_graphics("img/pais.jpg")
 ]
 
 .pull-right[
-```{r reta-baby-1, echo=FALSE, fig.cap="", out.width="70%"}
+```{r reta-baby-1, echo=FALSE, fig.cap="", out.width="60%"}
 knitr::include_graphics("img/gecy.jpg")
 ```
 ]
 
 ???
 
-IMG_20210513_194541444
-
-I was born in 1979, in Belo Horizonte, Brazil. 
+I was born in a traditional Brazilian family, back in 1979. Besides my parents, who look like they have just come out of a TV series from the 80's, my grandmother played an important party in this first stage of my life. 
 
 ---
-background-image: url(img/flower2.jpg)
-background-size: cover
+
 
 ## That's 70s show
 
-```{r eu, echo=FALSE, out.width="60%"}
+```{r eu, echo=FALSE, out.width="55%"}
 knitr::include_graphics("img/reta_baby_1.jpg")
 ```  
 
 ???
 
-IMG_20210513_194541444
 
-I was born in 1979, in Belo Horizonte, Brazil. 
+That's the cute version of me!
 
 ---
 class: middle, center
 background-image: url(img/bh_pic.png)
 background-size: cover
+
+???
+
+
+I was born in Belo Horizonte, this crazy big and young metropolitan area in the southeast of Brazil. Crazy as every urban area with car-oriented planners, very little public transport and street design that does not allow pedestrians and bicycles to get around safely. 
+
 
 --
 
@@ -133,65 +157,92 @@ background-size: cover
 knitr::include_graphics("img/bh.png")
 ```  
 
+???
 
+
+
+For those of you that do not know where Belo Horizonte is, here is a little hint! 
 
 
 ---
 background-image: url(img/idaho.png)
 background-size: cover
 
+???
+I had a traditional adolescence, going crazy at the first time I played in the snow! This happened in my first international experience: a high school exchange program in Idaho-US.
+
+It is hard to tell which picture I am more ashamed of. But my ecumene kept enlarging!
 
 ---
-class: center, middle
+
 background-image: url(img/change1.jpg)
 background-size: cover
 
-.huge[Learning and teaching...]
+.enormous[
+Learning and teaching...
+]
 
+???
+
+The second part I proposed for this presentation concerns the more deductive part of my life. Less exploration, more acquisition of knowledge, and mostly I found myself entrapped in an unequal and hypothetical world.
 
 ---
 class: center, middle
-background-image: url(img/change1.jpg)
-background-size: cover
+
 
 ```{r time1, echo=FALSE, fig.cap="", message=FALSE, warning=FALSE, out.width="95%"}
 knitr::include_graphics("img/understanding1.png")
 ```
 
+???
+
+These were times to get a Bachelor's and Master's degree, a Postgraduation diploma, some professional experience and a lot of teaching experience! And a lot of LOVE! I kept expanding my ecumene and enhancing distances from the real tangible world (besides motherhood! what a well-grounded challenge!)
+
 ---
-background-image: url(img/thisisengineering-raeng-lSgfUoyyDwI-unsplash.jpg)
-background-size: cover
 
-.yellow[
-.larger[
-Civil Engineering and carreer choice
-]]
 
-.yellow[.bigger[
+## Civil Engineering and carreer choice
+
+.pull-left[
+.bigger[
 - Students council and institutional representation
-- Undergrauduate Program for Scientific Training]]
+- Undergrauduate Program for Scientific Initiation: **Residential Mobility and Transportation System in the Metropolitan Region of Belo Horizonte** 
+- Final semester: **Transportation Engineering**
+]]
 
-.off-white[.bigger[
-       - “Residential Mobility and Transportation System in the Metropolitan Region of Belo Horizonte” 
-]]
-.yellow[.bigger[
-- Final semester: Transportation Engineering
-]]
+.pull-right[
+```{r civil1, echo=FALSE, fig.cap="", message=FALSE, warning=FALSE, out.width="80%"}
+knitr::include_graphics("img/pexels-thirdman-5584052.jpg")
+```
+]
+
+???
+
+During my undergraduate studies, I explored possibilities that were a game changer in my professional journey. 
+
+I was a member of the students council and responsible for institutional representation of s students body
+
+I joined an Undergrauduate Program for Scientific Initiation in the project entitled “Residential Mobility and Transportation System in the Metropolitan Region of Belo Horizonte”.
+
+And in my final semester, I enrolled myself in transportation engineering courses. 
+
+Transportation was the only field of knowledge in my course that allowed me to identify challenges directly related to people. 
+
 ---
 
 class: center
-background-image: url(img/change1.jpg)
-background-size: cover
+
 
 ```{r forma, echo=FALSE, out.width="100%"}
 knitr::include_graphics("img/forma.png")
 ```  
 
+???
+
+By the end of 2001 I got my Civil Engineering Bachelors' degree. But.... 
+
 ---
 class: center
-background-image: url(img/change1.jpg)
-background-size: cover
-
 
 ```{r forma1, echo=FALSE, out.width="100%"}
 knitr::include_graphics("img/forma1.png")
@@ -199,236 +250,162 @@ knitr::include_graphics("img/forma1.png")
 
 ---
 
-background-image: url(img/change1].jpg)
-background-size: cover
+## M.Sc. Transportation Engineering
 
-# Master degree
+.pull-left[
+```{r ime, echo=FALSE, out.width="100%"}
+knitr::include_graphics("img/1546-0-2811a8a40c0e73a73ed8018128658ca6.jpg")
 
-
-.large[
-Military Institute of Engineering - M.Sc. Transportation Engineering
-
-"Neuro-Fuzzy Model for Freight Transport Mode Choice"
-
-Supervisor: Prof. Marcus Vinícius Quintela Cury
+```
 ]
 
-.center[
-.larger[
-2002-2004
+.pull-right[
+.bigger[
+- Military Institute of Engineering
+
+- **Neuro-Fuzzy Model for Freight Transport Mode Choice**
+
+- Supervisor: Prof. Marcus Vinícius Quintela Cury
 ]]
 
+???
+I wasn't sure I was well instructed to work as an transportation engineer. So I decided to get a master's degree. Once more, my ecumene expanded to Rio de Janeiro! But, since I had been working since I was 16 years-old, I decided to go back to Belo Horizonte and work while finishing the thesis. In the mean time.... 
+
 ---
-background-image: url(img/change1].jpg)
-background-size: cover
 
-# Postgraduate diploma in Railway Engineering
+## Postgraduate diploma in Railway Engineering
 
-
-.large[
+.pull-left[
+.bigger[
 Vale - PgDip. Transportation Engineering
+
+**Analysis of the Increased Reliability of the Locomotives of the Grain Route after the Implementation of FCA's New Traction Scheme**
+]]
+
+.pull-right[
+```{r vale, echo=FALSE, out.width="100%"}
+knitr::include_graphics("img/vale.png")
+
+```
 ]
 
-Analysis of the Increased Reliability of the Locomotives of the Grain Route after the Implementation of FCA's New Traction Frame
+???
 
-.center[
-.larger[
-2003-2004
-]]
-
+I had the opportunity to get a postgraduate diploma at Vale in Railway Engineering and in 2004 I defended my thesis. 
 
 ---
-background-image: url(img/change1].jpg)
-background-size: cover
 
-# Teaching experience
+## Professional experience in the industry
 
-.purple[
-.larger[
-English Teacher: 1996-2000
-]]
+.pull-left[
+```{r vale1, echo=FALSE, out.width="80%"}
+knitr::include_graphics("img/logo-vale-1024.png")
 
-```{r english, echo=FALSE, out.width="90%"}
-knitr::include_graphics("img/teachinghub3a.jpg")
-``` 
+```
+]
 
+.pull-right[
+```{r systra, echo=FALSE, out.width="60%"}
+knitr::include_graphics("img/systra-architects.png")
 
-New Horizons College    
+```
+]
+
+---
+
+## Teaching experience
+
+.bigger[
+English Teacher
+
+Novos Horizontes College    
 
 Community Foundation for Higher Education of Itabira
 
 Department of Transportation Engineering and Geotechnics - UFMG
 
-Cefetmg
+**Federal Center for Technological Education of Minas Gerais**
+]
+
+???
+
+Along with my studies, I experimented teaching... English teacher, lecturer in different institution.
 
 ---
 
-background-image: url(img/change1].jpg)
-background-size: cover
+## CEFET-MG
 
-# Professional experience in the industry
-
-.pull-left[
-.large[
-.bold[
-Systra - Tectran
-]]]
-
---
-
-
-.pull-left[
-.large[
-.bold[
-Vale - Engenharia Ferroviária
-]
-]
-]
-
----
-
-background-image: url(img/change1].jpg)
-background-size: cover
-
-.pull-left-wide[
-```{r vale, echo=FALSE, fig.cap="", out.width="100%"}
-knitr::include_graphics("img/vale.png")
-```
-]
-
-.pull-right-narrow[
-- Estudos operacionais
-- VPL
-- PPC
-]
-
-
----
-background-image: url(img/cefet1.png)
-background-size: cover
-
-.center[
-.larger[
-2006 - 2019
+.bigger[.center[
+**Transportation Engineering Department/ Department of Social Sciences**
 ]]
 
-**Transportation Engineering Department**
-
-Technical courses in Transportation and Traffic
-
-
-Coordenação de laboratórios
-
-
-Coordenação de cursos
-
+.bigger[
+.pull-left[
 
 Sub-coordination and coordination of Transportation Engineering undergraduate course   
 
-Introduction to Transportation Engineering ❤️   
-
 Scientific Initiation and Junior Scientific Initiation students
 
-.pull-right[
-```{r enge, echo=FALSE, fig.cap="Encontro Nacional dos coordenadores de cursos de graduação", message=FALSE, warning=FALSE, fig.align = 'center',out.width="100%"}
-knitr::include_graphics("img/enges.jpg")
-```
+Research Ethics Committee
 ]
 
----
-background-image: url(img/cefet1.png)
+.pull-right[
+Thematic commitee for research projects assessment
 
+Examining Boards for different positions in Technological Education career
 
-.bold[
-.larger[
-2020 - today   
-Administração
+Examining Boards of the simplified positions for temporary teachers
+
 ]]
 
+---
 
+## Teaching 
+
+.pull-left[
 .bigger[
-- Research Ethics Committee CEP/CEFET-MG;
---
-- Thematic commitee for research projects assessment;
---
-- Participation in Examining Boards for different positions in Technological Education career;
---
-- Participation in Examining Boards of the simplified positions for temporary teachers;
---
-- Other temporary commissions;
-]
 
----
+Reduce distance among faculty and students
 
-class: middle
+Students must be active parties in education
 
+Fun - gamification and student protagonism
+]]
 
-❤️❤️
-
-
-.pull-left[
-```{r nos2, echo=FALSE,  message=FALSE, warning=FALSE, out.width="70%"}
-knitr::include_graphics("img/nos2.jpg")
-```
-]
-
-❤️❤️
 .pull-right[
-```{r nos3, echo=FALSE,  message=FALSE, warning=FALSE, out.width="70%"}
-knitr::include_graphics("img/nos3.jpg")
-```
-]
+.bigger[
+Teaching and learning - teaching to learn - Long life learning
+
+Critical perspective
+
+Adaptation
+
+Study, study, study, and study some more!
+]]
 
 ---
-class: middle
-
-
-❤️❤️
-
-
-
-.pull-left[
-```{r sofia, echo=FALSE,  message=FALSE, warning=FALSE, out.width="70%"}
-knitr::include_graphics("img/sofia1.png")
-```
-]
-❤️❤️
-.pull-right[
-```{r sofia2, echo=FALSE,  message=FALSE, warning=FALSE, out.width="50%"}
-knitr::include_graphics("img/sofia2.png")
-```
-]
-
----
-
-class: middle
-
-❤️❤️
-.pull-left[
-```{r joao, echo=FALSE, message=FALSE, warning=FALSE, out.width="70%"}
-knitr::include_graphics("img/joao1.png")
-```
-]
-
-❤️❤️
-.pull-right[
-```{r joao2, echo=FALSE, message=FALSE, warning=FALSE, out.width="50%"}
-knitr::include_graphics("img/joao2.png")
-```
-]
-
----
-class: center, middle
-background-image: url(img/butterfly.jpg)
+class: center, bottom
+background-image: url(img/games.png)
 background-size: cover
 
-.huge[Producing and sharing knowlegde for a better world...]
 
 ---
 
-class: center, middle
-background-image: url(img/butterfly.jpg)
+class: center, bottom
+background-image: url(img/pexels-pixabay-63643.jpg)
 background-size: cover
+
+.enormous[
+Producing and sharing knowlegde for a better world...
+]
+
+???
+
+
+Finally reducing distances! Focusing on people, social justice and human scale cities...
+
+
+---
 
 ```{r time2, echo=FALSE, fig.cap="", message=FALSE, warning=FALSE, out.width="95%"}
 knitr::include_graphics("img/understanding2.png")
@@ -436,117 +413,48 @@ knitr::include_graphics("img/understanding2.png")
 
 ---
 
-background-image: url(img/puc.png)
-background-size: container
+## Doctor's degree in Geography - Spatial Analysis
 
-.larger[
-2011-2015
-]
-
-.large[
-Geography - Spatial Information Treatment   
-]
-
-*Alexandre Magno Alves Diniz*
-
-.large[
-Período sanduíche no Institut Rhônalpin des Systèmes Complexes   
-]
-
-*Prof. Pablo Jensen*
-
-Spatial Analysis of the correlation among the location of grocery retailers, the average income of the population and prices policy: a case study for Belo Horizonte.
-
----
-
-
-background-image: url(img/mps.jpg)
-background-size: cover
-
-
-.larger[
-2015
-]
-
-.bold[
-.large[
-Análise Espacial dos Preços de Produtos Alimentícios no Varejo de Belo Horizonte e sua relação com a renda média da população   
-Orientação: *Alexandre Magno Alves Diniz*
-
-]]
-
-.center[
-.larger[
-.pink[
-Acessibilidade
-]]]
-
----
-
-# 2017 - 2021
-
-.bold[
-Programa de mestrado em Geotecnia e Transportes da UFMG   
-]
-
-.midi[
--   Clarissa Pontes Melo - Análise da macroacessibilidade de pedestres idosos sob a ótica da qualidade do espaço urbano. 2021.
-
--   André Augusto Cunha Libânio - Avaliação da acessibilidade em cidades brasileiras. 2020.
-
--   Paulo Henrique Góes Pinto - Identificação e qualificação de centralidades urbanas por meio de estrutura morfológico-funcional: um estudo de caso para a RMBH. 2020.
-
--   José Moreira Gonçalves - Atração de Viagens de Carga em Indústria Automobilística de Máquinas Agrícolas e Rodoviárias. 2019.
-
--   Gabriela Pereira Lopes - Uma Análise da Localização de Instalações Logísticas versus Geração de Viagens e os Impactos na mobilidade urbana em Belo Horizonte. 2018.
-]
-
----
-
-
----
-
-
+.bigger[
 .pull-left[
-.bold[
-.larger[
-2017...   
-Pesquisa
+
+**Spatial Analysis of the correlation among the location of grocery retailers, the average income of the population and prices policy: a case study for Belo Horizonte**
+
+*Supervisor: Alexandre Magno Alves Diniz*
+
+Período sanduíche no Institut Rhônalpin des Systèmes Complexes   
 ]]
-
-.bold[
-.midi[
-Translog City   
-
-NIUMAR - Network on Intelligent Urban Mobility and Accessibility research ❤️   
-
-PLACES - Planning for Access ❤️  
-
-NOSS - Núcleo de Estudos Organizacionais e Sociedade e Subjetividade ❤️  
-]]
-]
 
 .pull-right[
-    ```{r niumar, echo=FALSE, fig.cap="2o Workshop da NIUMAR", out.width="100%"}
-    knitr::include_graphics("img/niumar.jpg")
-    ```
+```{r doc, echo=FALSE, fig.cap="", message=FALSE, warning=FALSE, out.width="95%"}
+knitr::include_graphics("img/defesa.jpg")
+```
 ]
 
 ---
 
-background-image: url(img/fundo2.png)
-background-size: cover
+## Research Groups and Networks
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="90%"}
-knitr::include_graphics("img/2022-05-06 22_30_58-Seal of Excellence.pdf - Foxit Reader.png")
-```
+.bigger[
+.pull-left[
+<strike>Translog City</strike> 
 
+NIUMAR - Network on Intelligent Urban Mobility and Accessibility research ❤️   
+RedeTP@acesso ❤️
 
-.bold[
-.larger[
-Pesquisa
+NOSS - Center for Organizational Studies, Society and Subjectivity ❤️  
+    
+PLACES - Planning for Access ❤️  
+
 ]]
 
+.pull-right[
+```{r niumar, echo=FALSE, out.width="100%"}
+    knitr::include_graphics("img/niumar.jpg")
+```
+]
+
+---
 .pull-left[
 **Revisora**   
 Transportes   
@@ -565,248 +473,79 @@ Revista Brasileira de Transportes.
 
 ---
 
+## Community involvement
+
 .pull-left[
-.bold[
-.larger[
-2018 ...    
-Extensão
-]]
+.bigger[
+Horta da Cidade - social enterpreneurship ❤️
 
-.bold[
-.midi[
+Paraíso do Tocantins Mobility Plan ❤️  
 
-Horta da Cidade   
-
-Plano de mobilidade de Paraíso do Tocantins   
-
-I Fórum Brasileiro de Logística Urbana   
-
-PET - Adm ❤️
-]
+Tutorial Education Program ❤️
 ]]
 
 .pull-right[
-
-```{r horta, echo=FALSE, fig.cap="Evento no Sebrae - Horta da Cidade", out.width="100%"}
+```{r horta, echo=FALSE, out.width="100%"}
 knitr::include_graphics("img/horta.jpg")
 ```
 ]
 
-
 ---
-
-# 2020 ...
-
-
-.bold[
-Programa de mestrado Administração do CEFET-MG
-]
-
 *Processos e sistemas decisórios em arranjos organizacionais*
 
--  Sofia Eleutério - trabalho sobre o processo decisório quanto à implementação de faixas exclusivas de ônibus como política pública.
+- Sofia Eleutério - trabalho sobre o processo decisório quanto à implementação de faixas exclusivas de ônibus como política pública.
 - Felipe - caracterização da atividade e políticas públicas para vendedores ambulantes em BH   
 - Fernando - Redes sociais para analisar a relação entre filiação partidária e cargos comissionados no governo federal
 
-Colegiado do PPGA
-
 
 ---
 
-background-image: url(img/cefet1.png)
+## Postdoctoral Fellowship
 
-.bold[
-.larger[
-2020 ...
-]
-Departamento de Ciências Sociais Aplicadas
-]
+.bigger[
+**Relationships among urban characteristics, real estate market and spatial patterns of warehouses in different geographic contexts**
 
-*Novas disciplinas*   
-*Novas perspectivas*   
-*Novas parcerias*
-
-Colegiado de Administração
-
----
-
-.bold[
-.larger[
-2018 ...    
-Internacionalização
-]]
-
-.midi[
-4th VREF Conference. Relationships among urban characteristics, real estate market and spatial patterns of warehouses in different geographic contexts. 2021.
-
-11th International Conference on City Logistics. EXPLORATORY ANALYSIS OF THE ACCESSIBILITY TO FOOD RETAILERS IN BELO HORIZONTE. 2019. 
-
-15th biannual NECTAR Conference. ACCESSIBILITY TO FOOD SYSTEMS IN BELO HORIZONTE, BRAZIL. 2019. ❤️
-
-6th workshop NIUMAR. Projects under development and research agenda. 2019. ❤️
-]
-
----
-
-.bold[
-.larger[
-2018 ...    
-Internacionalização
-]]
-
-.midi[
-
-1st Brazilian EMI. 2018.
-
-3rd workshop NIUMAR. Perspectivas de parceria. 2018. ❤️
-
-4th workshop NIUMAR. Encaminhamentos. 2018. ❤️
-
-Workshop do Cluster 2 do Nectar. A sustainable business model for urban farming based on city logistics concepts for local production and consumption of vegetables. 2018. ❤️
-
-
-]
-
----
-
-
-.bold[
-.larger[
-2018 ...    
-Internacionalização
-]]
-
-.midi[
-Efficiency in Urban Logistics: Current challenges, innovative & green solutions. 2017.
-
-Researchers Links Workshop: How the Railways contribute to improving quality of life?. Researchers Links Workshop. 2017. ❤️
-
-2nd workshop da NIUMAR. Desenvolvimento de pesquisa. 2018. (Seminário). ❤️
-
-Semana Internacional de Engenharia Metroferroviária, Transportes e Logística. Análise espacial aplicada a soluções para o último quilômetro. 2017.
-
-
-]
-
----
-.bold[
-.larger[
-2018 ...    
-Internacionalização
-]]
-
-.midi[
-
-
-Tenth International Conference on City Logistics. Urban Distribution of Craft-Brewed Beer in Belo Horizonte Metropolitan Area. 2017.
-
-Cyprien Legros   
-Jonathan Reith   
-Joanna Wilkolek   
-Neda Marjanovic   
-]
-
----
-
-.bold[
-.larger[
-2020 - 2021    
-Pós-doutorado remoto
-]]
-
-.bold[
-.large[
-Relationships among urban characteristics, real estate market and spatial patterns of warehouses in different geographic contexts.
-]]
 
 Logistics City Chair, da Université Gustave Eiffel   
 *Laetitia Dablanc*  
-
-
+]
 
 ---
-class: center
-background-image: url(img/future.jpg)
+
+## External Funding 
+
+.pull-left[
+RENOVATE - 
+
+]
+
+.pull-right[
+```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="60%"}
+knitr::include_graphics("img/2022-05-06 22_30_58-Seal of Excellence.pdf - Foxit Reader.png")
+```
+]
+
+---
+class: center, bottom
+background-image: url(img/arun-clarke-VAxzTA5IStU-unsplash.jpg)
 background-size: cover
 
 
-# E o futuro?
-
-
-
----
-
----
-class: center, middle
-background-image: url(img/flower2.jpg)
-background-size: cover
-
-.huge[Why Chalmers and where to go...]
-
+.enormous[
+Why Chalmers and where to go...
+]
 
 ---
 
-.bold[
-.large[
-Reduce distance among faculty and students
-
-Teaching and learning - being a tutor - teaching to learn
-]]
-
---
-
-.bold[
-.large[
-Critical perspective even in the most positivist disciplines
-]]
-
---
-
-.bold[
-.large[
-Fun - gamification and student protagonism
-]]
-
---
-
-.bold[
-.large[
-Adaptation - Emergency Remote Learning
-]]
-
---
-
-.bold[
-.large[
-Study, study, study, and study some more!
-]]
-
---
-
-.bold[
-.large[
 Contribute to building better places to live, human scale cities and social justice - And this is what drives Chalmers
-]]
 
---
-
-.bold[
-.large[
 Communicating Science - OpenScience
-]]
-
----
-How
-
-
----
-What
 
 
 ---
 
 class: center
-background-image: url(img/passion.jpg)
+background-image: url(img/together.jpg)
 background-size: cover
 
 .bold[
@@ -820,69 +559,47 @@ To produce KNOWLEDGE, one needs Eros. Renata
 
 ---
 
-class: middle, center
-background-image: url(img/together.jpg)
-background-size: cover
-
----
-
 class: bottom, center
 background-image: url(img/dist.jpg)
 background-size: cover
 
 .larger[
-Curating people and reducing distances....
-]
----
-
-class: inverse
-
-.link_style[
-.pull-left[
-
-[Lattes](http://lattes.cnpq.br/2642488704355833)
-
-[Orcid](https://orcid.org/0000-0002-9011-2342)
-
-[Google Scholar](https://scholar.google.com/citations?user=V6EX45EAAAAJ)
-
-[CV](https://github.com/retaoliveira/relements/raw/main/texto/index.pdf)
-
-]]
-
-.pull-right[
-
-```{r , echo=FALSE,message=FALSE, warning=FALSE, out.width="40%"}
-knitr::include_graphics("img/reta_nova.jpeg")
-```
-
-```{r , echo=FALSE,message=FALSE, warning=FALSE, out.width="40%"}
-knitr::include_graphics("img/reta.jpg")
-```
+Keep reducing distances at Chalmers
 ]
 
 ---
 
+class: middle, inverse
 
-class: bottom, center
-background-image: url(img/wordcloud.png)
-background-size: cover
 
 .larger[
-.pink[
-**Muito obrigada**!
+.center[
+THANK YOU!
 ]]
 
----
+&nbsp;
+<hr />
 
-```{r eval=FALSE, include=FALSE}
-library(ggwordcloud)
-#> Loading required package: ggplot2
-data("love_words_small")
-set.seed(42)
-ggplot(love_words_small, aes(label = word, size = speakers)) +
-  geom_text_wordcloud() +
-  scale_size_area(max_size = 40) +
-  theme_minimal()
-```
+<p style="text-align: center;"><span style="color: #ebdb00;"><em>renataoliveira@gmail.com</em></span></p>
+
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+
+
+<!-- Add font awesome icons -->
+<p style="text-align: center;">
+    <a href="https://twitter.com/retaoliveira?lang=en" class="fa fa-twitter fa-2x"></a>&nbsp;&nbsp;
+    <a href="https://github.com/retaoliveira" class="fa fa-github fa-2x"></a>&nbsp;&nbsp;
+    <a href="https://scholar.google.com/citations?user=V6EX45EAAAAJ" class="ai ai-google-scholar ai-2x"></a>&nbsp;&nbsp;
+    <a href="https://orcid.org/0000-0002-9011-2342" class="ai ai-orcid ai-2x"></a>&nbsp;&nbsp;
+    <a href="http://lattes.cnpq.br/2642488704355833" class="ai ai-lattes ai-2x"></a>&nbsp;&nbsp;
+    <a href="https://github.com/retaoliveira/relements/raw/main/texto/index.pdf" class="ai ai-cv ai-2x"></a>
+
+</p>
+
+&nbsp;
+
+
 
