--- a/index1.Rmd
+++ b/index1.Rmd
@@ -1346,3 +1346,11 @@ Neda Marjanovic
 ]
 
 ---
+
+---
+
+## Graduate Students
+
+- Sofia Eleutério - trabalho sobre o processo decisório quanto à implementação de faixas exclusivas de ônibus como política pública.
+- Felipe - caracterização da atividade e políticas públicas para vendedores ambulantes em BH   
+- Fernando - Redes sociais para analisar a relação entre filiação partidária e cargos comissionados no governo federal
