--- a/index.Rmd
+++ b/index.Rmd
@@ -415,15 +415,16 @@ knitr::include_graphics("img/understanding2.png")
 
 ## Doctor's degree in Geography - Spatial Analysis
 
-.bigger[
 .pull-left[
-
+.bigger[
 **Spatial Analysis of the correlation among the location of grocery retailers, the average income of the population and prices policy: a case study for Belo Horizonte**
+]
 
 *Supervisor: Alexandre Magno Alves Diniz*
 
-Período sanduíche no Institut Rhônalpin des Systèmes Complexes   
-]]
+PUCMinas   
+Institut Rhônalpin des Systèmes Complexes   
+]
 
 .pull-right[
 ```{r doc, echo=FALSE, fig.cap="", message=FALSE, warning=FALSE, out.width="95%"}
@@ -455,6 +456,10 @@ PLACES - Planning for Access ❤️
 ]
 
 ---
+## Main research Projects
+
+Fazer o mapa mental dos projetos e como se relacionam
+
 .pull-left[
 **Revisora**   
 Transportes   
@@ -490,13 +495,6 @@ knitr::include_graphics("img/horta.jpg")
 ```
 ]
 
----
-
-## Graduate Students
-
-- Sofia Eleutério - trabalho sobre o processo decisório quanto à implementação de faixas exclusivas de ônibus como política pública.
-- Felipe - caracterização da atividade e políticas públicas para vendedores ambulantes em BH   
-- Fernando - Redes sociais para analisar a relação entre filiação partidária e cargos comissionados no governo federal
 
 
 ---
@@ -511,6 +509,13 @@ Logistics City Chair, da Université Gustave Eiffel
 *Laetitia Dablanc*  
 ]
 
+
+---
+## Main publications
+
+
+
+
 ---
 
 ## External Funding 
@@ -523,10 +528,11 @@ MSCA Postdoctoral Fellowship 2021
 ]]
 
 .pull-right[
-```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="50%"}
+```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="55%"}
 knitr::include_graphics("img/2022-05-06 22_30_58-Seal of Excellence.pdf - Foxit Reader.png")
 ```
 ]
+
 
 ---
 class: center, bottom
@@ -544,20 +550,21 @@ Contribute to building better places to live, human scale cities and social just
 
 Communicating Science - OpenScience
 
+Develop a research identity, stimulate students para envolvimento em projetos com objetivo social e sustentável, life long learning (myself, my coworkers, my students and people from the community)
 
 ---
 
 class: center
-background-image: url(img/together.jpg)
+background-image: url(img/pexels-monstera-5874738.jpg)
 background-size: cover
 
 .bold[
 .large[
-“To TEACH, one needs Eros” Plato
+**“To TEACH, one needs Eros” Plato**
 
-To LEARN, one needs Eros. Renata
+**To LEARN, one needs Eros. Renata**
 
-To produce KNOWLEDGE, one needs Eros. Renata
+**To produce KNOWLEDGE, one needs Eros. Renata**
 ]]
 
 ---
@@ -566,9 +573,10 @@ class: bottom, center
 background-image: url(img/dist.jpg)
 background-size: cover
 
-.larger[
+.enormous[
+.center[
 Keep reducing distances at Chalmers
-]
+]]
 
 ---
 
@@ -603,6 +611,5 @@ THANK YOU!
 </p>
 
 &nbsp;
-
 
 
